[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-scraping"
version = "0.1.0"
description = "A workflow that, given several urls, scrapes and summarizes their content."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "llama-index-workflows>=2.5.0,<3.0.0",
  "llama-index-llms-google-genai"
]

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[tool.hatch.envs.default.scripts]
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check --fix ."
lint-check = ["ruff check ."]
typecheck = "ty check src"
test = "pytest"
all-check = ["format-check", "lint-check", "test"]
all-fix = ["format", "lint", "test"]

[tool.llamadeploy]
env_files = [".env"]

[tool.llamadeploy.workflows]
default = "web_scraping.workflow:workflow"
